# ROS-Pioneer3DX

./: Generic-CMakeLists.txt  README.md
Mobifeteira/Mobifeteira/: config.xml  package-lock.json  package.json
Mobifeteira/Mobifeteira/plugins/: android.json  fetch.json  ios.json
Mobifeteira/Mobifeteira/plugins/cordova-plugin-chrome-apps-common/: package.json
Mobifeteira/Mobifeteira/plugins/cordova-plugin-chrome-apps-sockets-tcp/: package.json
Mobifeteira/Mobifeteira/plugins/cordova-plugin-chrome-apps-sockets-tcpserver/: package.json
Mobifeteira/Mobifeteira/plugins/cordova-plugin-network-information/: package.json
Mobifeteira/Mobifeteira/plugins/cordova-plugin-networkinterface/: package.json
Mobifeteira/Mobifeteira/plugins/cordova-plugin-whitelist/: package.json
Mobifeteira/Mobifeteira/plugins/cz.blocshop.socketsforcordova/: package.json
Mobifeteira/Mobifeteira/www/: index.html
Mobifeteira/Mobifeteira/www/js/: index.js
docs/: README.md  _config.yml  index.html  index.md  newpage.md
docs/_pages/: instalacao.md  instalação.md
p3dx_ufsc/: CMakeLists.txt  package.xml
p3dx_ufsc/launch/: p3dx_ufsc.launch
p3dx_ufsc/src/: AutoRun.hpp  main.cpp  monitor.hpp  socket.cpp  socket_info.cpp
p3dx_ufsc/src/libs/: battery.hpp  bumpers.hpp  defines_sockets.hpp  lasers.hpp  motors.hpp  pose.hpp  rostypes.hpp  sonar.hpp
